# llm-load-balancer

./: .gitignore  complete_project_plan.md  distributed-llm-plan.md  main.py  nvidia-prime-guide.md  run_guide.md  setup_project.sh
distributed-llm-load-balancer/: .env.example  .gitignore  README.md  complete_project_plan.md  docker-compose.yml  docker-compose.yml.bak  dynamic_recovery_updates.md  gpu_log.csv  main.py  phase8_testing.md  pyproject.toml  requirements-phase1.txt  response_saving_updates.md  run_guide.md
distributed-llm-load-balancer/client/: load_generator.py
distributed-llm-load-balancer/common/: config.py  models.py
distributed-llm-load-balancer/docker/: Dockerfile.master  Dockerfile.worker
distributed-llm-load-balancer/lb/: least_connections.py  load_aware.py  load_balancer.py  round_robin.py
distributed-llm-load-balancer/llm/: inference.py
distributed-llm-load-balancer/master/: app.py  http_scheduler.py  scheduler.py
distributed-llm-load-balancer/metrics/: collector.py  dashboard.py
distributed-llm-load-balancer/rag/: indexer.py  retriever.py
distributed-llm-load-balancer/tests/: test_fault_tolerance.py  test_load_balancer.py  test_rag.py
distributed-llm-load-balancer/worker/: app.py
distributed-llm-load-balancer/workers/: gpu_worker.py
phases/: phase1_foundation.md  phase2_workers_lb.md  phase3_rag.md  phase4_llm.md  phase5_metrics.md  phase6_fault_tolerance.md  phase7_load_generator.md  phase8_testing.md  phase_docker_distributed.md
