[project]
name = "distributed-llm-load-balancer"
version = "0.1.0"
description = "Distributed LLM inference with load balancing, RAG, and fault tolerance"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
    "psutil>=5.9.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
